# tft_flwr

./: .gitignore  README.md  train_multi_tft.py  train_resume.py  warm_start_train.py
callbacks/: custom_checkpoint.py
configs/: model_config.yaml  weights_config.yaml
data/: load_dataset.py
flwr_tft/: client_app.py  pyproject.toml  server_app.py  task.py
flwr_tft/tft_flower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/: tft_module.py
src/: ccatch.py  check_merged_data.py  generate_targets_auto.py  indicating.py  indicators.py  merged.py  target_config.py
utils/: composite.py  focal_loss.py  loss_factory.py  metric_factory.py  run_helper.py  stage_summary.py
