[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tft-flower"
version = "0.1.0"
description = "Federated training for dreaminate/tft_module with Flower"
requires-python = ">=3.9"
dependencies = [
  "flwr>=1.19.0",                 # 不拉 ray/otel，更稳
  "pytorch-lightning>=2.2.0",
  "torch",
  "pytorch-forecasting",
  "pyyaml",
  "omegaconf"
]

[tool.setuptools]
# 扁平布局：声明顶层模块，支持 editable 安装
py-modules = ["client_app", "server_app", "task"]

[tool.flwr.app]
publisher = "dreaminate"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
fraction-fit = 0.5            # 2 个里抽 1 个
fraction-evaluate = 0.5
min-fit-clients = 1           # ← 关键：至少取 1 个
min-evaluate-clients = 1
min-available-clients = 1
local-epochs = 1
batch-size = 16
num-workers = 1

[tool.flwr.federations.local-simulation]
num-supernodes = 2
backend.name = "multiprocessing"
options.num-supernodes = 2
options.backend.name = "multiprocessing"

